# keystone

./: .adr-dir  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml  docker-compose.yaml  justfile  mod.rs  mp:w  prelude.rs  skaffold.yaml  typos.toml
.github/actions/deploy_keystone/: action.yml
.github/workflows/: audit.yml  benchmark.yml  benchmark_fork_run.yml  benchmark_fork_track.yml  benchmark_pr.yml  build-keycloak-image.yml  build-keystone-py-image.yml  ci.yml  container-build.yml  container-publish.yml  fork_pr_benchmark_run.yml  fork_pr_benchmark_track.yml  functional.yml  integration.yml  linters.yml  loadtest.yml  mdbook.yaml  mdbook.yml  policy-container.yml  propose_osc_changes.yml  test_keystone.yml
benches/: fernet_token.rs
doc/: book.toml
doc/src/: SUMMARY.md  architecture.md  federation.md  install.md  intro.md  jwt.md  oidc.md  openapi.yaml  passkey.md  performance.md  policy.md  swagger-ui.html
doc/src/adr/: 0001-record-architecture-decisions.md  0002-open-policy-agent.md  0003-sea-orm.md  0004-v4-api.md  0005-auth-passkey.md  0006-federation-idp.md  0007-federation-mapping.md  0008-workload-federation.md  0009-auth-token-revoke.md  index.md
loadtest/: Cargo.toml  report_py.html  report_python_server.html  report_rust.html  report_rust_server.html
loadtest/src/: main.rs  v3.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250301_000001_passkey.rs  m20250414_000001_idp.rs  m20250505_150705_seed_federation.rs
policy/: identity.rego  identity_provider_list.rego
policy/assignment/assignment/: list.rego  list_test.rego
policy/assignment/role/: create.rego  create_test.rego  delete.rego  delete_test.rego  list.rego  list_test.rego  show.rego  show_test.rego  update.rego  update_test.rego
policy/auth/token/: revoke.rego  revoke_test.rego  show.rego  show_test.rego
policy/federation/idp/: create.rego  delete.rego  identity_provider_create.rego  identity_provider_create_test.rego  identity_provider_delete_test.rego  identity_provider_list.rego  identity_provider_show.rego  identity_provider_update_test.rego  list.rego  list_test.rego  show_test.rego  update.rego
policy/federation/mapping/: create.rego  delete.rego  delete_test.rego  list.rego  mapping_create.rego  mapping_create_test.rego  mapping_list_test.rego  mapping_show.rego  mapping_show_test.rego  mapping_update.rego  mapping_update_test.rego
policy/federation/token/: check.rego  validate.rego
policy/identity/group/: create.rego  create_test.rego  delete.rego  delete_test.rego  list.rego  list_test.rego  show.rego  show_test.rego  update.rego  update_test.rego
policy/identity/user/: create.rego  create_test.rego  delete.rego  delete_test.rego  list.rego  list_test.rego  show.rego  show_test.rego  update.rego  update_test.rego
policy/role_assignment/: check_grant.rego  check_grant_test.rego  create_grant.rego  create_grant_test.rego  list.rego  list_test.rego
policy/token/: check.rego  validate.rego
policy/token/restriction/: create.rego  create_test.rego  delete.rego  delete_test.rego  list.rego  list_test.rego  show.rego  show_test.rego  update.rego  update_test.rego
src/: config.rs  db.rs  error.rs  keystone.rs  lib.rs  plugin_manager.rs  policy.rs  provider.rs  tests.rs
src/api/: auth.rs  common.rs  error.rs  mod.rs  types.rs
src/api/v3/: mod.rs  types.rs
src/api/v4/: mod.rs
src/assignment/: backend.rs  error.rs  mock.rs  mod.rs  types.rs
src/assignment/backend/: error.rs  sql.rs
src/assignment/backends/: error.rs  sql.rs
src/assignment/types/: assignment.rs  role.rs
src/auth/: mod.rs
src/catalog/: backends.rs  error.rs  mock.rs  mod.rs  types.rs
src/catalog/backends/: error.rs  sql.rs
src/catalog/types/: endpoint.rs  service.rs
src/db/: entity.rs
src/db/entity/: access_rule.rs  access_token.rs  alembic_version.rs  application_credential.rs  application_credential_access_rule.rs  application_credential_role.rs  assignment.rs  config_register.rs  consumer.rs  credential.rs  endpoint.rs  endpoint_group.rs  expiring_user_group_membership.rs  federated_auth_state.rs  federated_identity_provider.rs  federated_mapping.rs  federated_user.rs  federation_protocol.rs  group.rs  id_mapping.rs  identity_provider.rs  idp_remote_ids.rs  implied_role.rs  limit.rs  local_user.rs  mapping.rs  mod.rs  nonlocal_user.rs  password.rs  policy.rs  policy_association.rs  prelude.rs  project.rs  project_endpoint.rs  project_endpoint_group.rs  project_option.rs  project_tag.rs  region.rs  registered_limit.rs  request_token.rs  (+17 more)
src/db_migration/: m20250301_000001_passkey.rs  m20250414_000001_idp.rs  m20251005_131042_token_restriction.rs  mod.rs
src/federation/: error.rs  mod.rs  types.rs
src/federation/backends/: error.rs  sql.rs
src/federation/types/: auth_state.rs  identity_provider.rs  mapping.rs
src/identity/: backends.rs  error.rs  mod.rs  password_hashing.rs  types.rs
src/identity/backends/: error.rs  fake.rs  keystone.rs  sql.rs
src/identity/types/: group.rs  user.rs
src/resource/: error.rs  mod.rs  types.rs
src/resource/backends/: error.rs  sql.rs
src/resource/types/: domain.rs  project.rs
src/revoke/: backend.rs  error.rs  mock.rs  mod.rs  types.rs
src/revoke/backend/: error.rs  sql.rs
src/tests/: api.rs  token.rs
src/token/: application_credential.rs  backend.rs  domain_scoped.rs  error.rs  federation_domain_scoped.rs  federation_project_scoped.rs  federation_unscoped.rs  fernet.rs  fernet_utils.rs  mock.rs  mod.rs  project_scoped.rs  restricted.rs  types.rs  unscoped.rs
src/token/backend/: fernet.rs
src/token/token_restriction/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/token/types/: application_credential.rs  domain_scoped.rs  federation_unscoped.rs  (+6 more)
tests/functional/: common.rs
tests/github/: keystone_utils.rs  main.rs
tests/interop/: main.rs
tests/keycloak/: keycloak_utils.rs  keystone_utils.rs  main.rs
tools/: Dockerfile.keycloak  Dockerfile.py-keystone  keystone.conf  keystone_bench_fernet.py  opa_config.yaml  start_keystone.sh
(+157 files in other folders)
