[package]
name = "openstack_keystone"
description = "OpenStack Keystone service"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Artem Goncharov (gtema)"]
rust-version = "1.85"  # MSRV
repository = "https://github.com/gtema/keystone"

[[bin]]
name="keystone"
path="src/bin/keystone.rs"

[[bin]]
name="keystone-db"
path="src/bin/keystone_db.rs"

[[bench]]
name = "fernet_token"
harness = false

[dependencies]
async-trait = { version = "0.1" }
async-std = { version = "1", features = ["attributes", "tokio1"] }
axum = { version = "0.8", features = ["macros"] }
base64 = { version = "0.22" }
bcrypt = { version = "0.17", features = ["alloc"] }
bytes = { version = "1.10" }
chrono = { version = "0.4" }
clap = { version = "4.5", features = ["derive"] }
color-eyre = { version = "0.6" }
config = { version = "0.15", features = ["ini"] }
derive_builder = { version = "0.20" }
dyn-clone = { version = "1.0" }
eyre = { version = "0.6" }
fernet = { version = "0.2" }
futures-util = { version = "0.3" }
mockall_double = { version = "0.3" }
opa-wasm = { version = "^0.1" }
openidconnect = { version = "4.0" }
regex = { version = "1.11"}
rmp = { version = "0.8" }
schemars = { version = "1.0" }
sea-orm = { version = "1.1", features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio"] }
sea-orm-migration = { version = "1.1" }
serde = { version = "1.0" }
serde_bytes = { version = "0.11" }
serde_json = { version = "1.0" }
thiserror = { version = "2.0" }
tokio = { version = "1.46", features = ["fs", "macros", "signal", "rt-multi-thread"] }
tokio-util = { version = "0.7" }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["compression-full", "request-id", "sensitive-headers", "trace", "util"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [] }
url = { version = "2.5", features = ["serde"] }
utoipa = { version = "5.4", features = ["axum_extras", "chrono"] }
utoipa-axum = { version = "0.2" }
utoipa-swagger-ui = { version = "9.0", features = ["axum", "vendored"], default-features = false }
uuid = { version = "1.17", features = ["v4"] }
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }

[dev-dependencies]
criterion = { version = "0.6", features = ["async_tokio"] }
http-body-util = "0.1"
hyper = { version = "1.6", features = ["http1"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
keycloak = { version = "26.2" }
mockall = { version = "0.13" }
reqwest = { version = "0.12", features = ["json"] }
sea-orm = { version = "1.1", features = ["mock"]}
serde_urlencoded = { version = "0.7" }
tempfile = { version = "3.20" }
thirtyfour = "0.36.0"
tracing-test = { version = "0.2" }
url = { version = "2.5" }

[profile.release]
strip = true
debug = false
lto = "thin"
#codegen-units = 1

[[test]]
name = "interop"
path = "tests/interop/main.rs"
test = false

[[test]]
name = "keycloak"
path = "tests/keycloak/main.rs"
test = false
